# TTPS2021

./: .env  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  requirements.txt
backend/app/: backend_pre_start.py  initial_data.py  pyproject.toml  tasks.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: appointments.py  configurators.py  employees.py  informant_doctors.py  informant_physicians.py  items.py  login.py  patients.py  presumptive_diagnoses.py  referring_physician.py  referring_physicians.py  reporting_physicians.py  roles.py  sample_batches.py  samples.py  studies.py  type_studies.py  (+3 more)
backend/app/constants/: css.py  role.py  state.py
backend/app/core/: config.py  mail.py  security.py
backend/app/crud/: __init__.py  base.py  crud_appointment.py  crud_health_insurance.py  crud_referring_physician.py  crud_report.py  crud_role.py  crud_sample.py  crud_sample_batch.py  crud_study.py  crud_study_states.py  crud_type_study.py  crud_user.py  crud_user_role.py  exceptions.py  study.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  appointment.py  budget.py  diagnosis.py  health_insurance.py  pathology.py  referring_physician.py  role.py  sample.py  sample_batch.py  study.py  study_updates.py  user.py  user_role.py
backend/app/schemas/: __init__.py  appointment.py  health_insurance.py  referring_physician.py  report.py  role.py  sample.py  sample_batch.py  study.py  token.py  user.py  user_role.py
backend/app/templates/: budget.html  report.html
(+163 files in other folders)
