[tool.poetry]
name = "ttps2021g8"
version = "0.1.0"
description = ""
authors = ["Francisco Herrera <fran.herrera124@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.70.0"}
SQLAlchemy = "^1.4.26"
SQLAlchemy-Utils = "^0.37.9"
python-dotenv = "^0.19.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
psycopg2-binary = "^2.9.1"
emails = "^0.6"
templated-emails = "^0.6.9"
alembic = "^1.7.4"
tenacity = "^8.0.1"
bcrypt = "^3.2.0"
weasyprint = "^53.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
